--- a/documentos.html
+++ b/documentos.html
@@ -1,173 +1,175 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Documentos de Hernavia</title>
-  <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
-  <link rel="preload" href="estilo.css" as="style">
-  <link rel="stylesheet" href="estilo.css">
-  <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
-  <meta name="robots" content="index, follow">
-  <meta name="author" content="Proyecto Hernavia">
-
-  <style>
-    /* ==== Estilo específico para Preguntas Frecuentes ==== */
-    .faq-section {
-      margin-top: 40px;
-      text-align: left;
-    }
-
-    .faq-section h2 {
-      color: #006A44;
-      margin-bottom: 10px;
-    }
-
-    /* Botón igual al de índice */
-    .faq-toggle-btn {
-      display: inline-block;
-      background-color: #006A44;
-      color: white;
-      padding: 15px 25px;
-      font-size: 1.1em;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 15px;
-      transition: background-color 0.3s ease, transform 0.1s ease;
-    }
-
-    .faq-toggle-btn:hover {
-      background-color: #004a2d;
-      transform: scale(1.02);
-    }
-
-    .faq-container {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-top: 20px;
-    }
-
-    .faq-card {
-      background-color: white;
-      border: 2px solid #006A44;
-      border-radius: 10px;
-      padding: 15px 20px;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .faq-card summary {
-      font-weight: bold;
-      color: #006A44;
-      font-size: 1.1em;
-      list-style: none;
-      outline: none;
-    }
-
-    .faq-card summary::marker {
-      display: none;
-    }
-
-    .faq-card[open] {
-      background-color: #f4fff9;
-      border-color: #004a2d;
-    }
-
-    .faq-card p {
-      margin-top: 10px;
-      color: #333;
-      line-height: 1.4;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documentos de Hernavia</title>
+    <meta name="description" content="Descubre los documentos iniciales de Hernavia para conocer sus principios y organización.">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://hernavia.github.io/Hernavia/favicono.png">
+    <link rel="preload" href="estilo.css" as="style">
+    <link rel="stylesheet" href="estilo.css">
+    <link rel="canonical" href="https://hernavia.github.io/Hernavia/documentos.html">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Proyecto Hernavia">
 </head>
 
 <body>
-  <header>
-    <h1>Documentos de Hernavia</h1>
-  </header>
+    <header>
+        <h1>Documentos de Hernavia</h1>
+    </header>
 
-  <nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="consultas.html">Consultas</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
-  </nav>
+    <nav class="nav-comun">
+        <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+        <a href="documentos.html">Documentos</a>
+        <a href="noticias.html">Noticias</a>
+        <a href="consultas.html">Consultas</a>
+        <a href="simbolos.html">Símbolos</a>
+        <a href="comounirse.html">¿Cómo unirse?</a>
+        <a href="sugerencias.html">Sugerencias</a>
+        <a href="noticias-random.html">Noticias Random</a>
+    </nav>
 
-  <main>
-    <section class="section texto-largo">
-      <h2>Carta Fundacional</h2>
-      <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
-      <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
-      <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
-      <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
-      <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
-    </section>
+    <main>
+        <section class="section texto-largo">
+            <h2>Carta Fundacional</h2>
+            <p>La Carta Fundacional de Hernavia es un documento breve, pensado como la base de nuestra identidad y organización. Funciona como una “constitución” inicial que guía los pasos del proyecto mientras crece y se consolida.</p>
+            <p>En ella se establece al Arconte como máxima autoridad, encargado de proteger la unión de la comunidad y tomar decisiones mientras se desarrollan instituciones más amplias. También recoge los principios fundamentales: respeto entre ciudadanos, cuidado de la naturaleza, participación activa, innovación y fraternidad con otras culturas.</p>
+            <p>Además, describe las obligaciones de los ciudadanos, que incluyen aportar al desarrollo de la comunidad, respetar las decisiones colectivas, defender la paz y contribuir al progreso común. Señala también objetivos iniciales como impulsar la innovación, proteger el medio ambiente, fomentar la educación cívica y promover un desarrollo económico propio.</p>
+            <p>La Carta dedica un espacio a los símbolos de Hernavia, especialmente la bandera, que representa la naturaleza, la paz, la innovación y las raíces con Colombia. Finalmente, aclara que se trata de un documento transitorio que podrá transformarse en una versión más completa a futuro.</p>
+            <a href="carta.html" class="boton-hernavia">Leer carta completa</a>
+        </section>
 
-    <section class="section texto-largo">
-      <h2>Leyes Transitorias</h2>
-      <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
-      <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
-      <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
-    </section>
+        <section class="section texto-largo">
+            <h2>Leyes Transitorias</h2>
+            <p>Las Leyes Transitorias de Hernavia son un conjunto de normas provisionales que guían el funcionamiento de la comunidad mientras se consolida la organización. Establecen cómo se puede revocar la ciudadanía, el aporte obligatorio de cada ciudadano, las penalizaciones por incumplimiento, la participación en votaciones y asambleas, la administración de fondos y la eliminación de datos personales en casos de renuncia.</p>
+            <p>Estas leyes buscan mantener la unidad, proteger la naturaleza, fomentar la innovación y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, siempre respetando los principios de respeto, paz, innovación y unión.</p>
+            <a href="leyes.html" class="boton-hernavia">Leer las leyes completas</a>
+        </section>
 
-    <!-- === Preguntas Frecuentes === -->
-    <section class="section texto-largo faq-section">
-      <h2>Preguntas Frecuentes</h2>
-      <button id="mostrarFAQ" class="faq-toggle-btn">Mostrar preguntas</button>
+        <!-- Sección de Preguntas Frecuentes -->
+        <section class="section">
+          <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-      <div id="faqSection" class="faq-container" style="display: none;">
-        <details class="faq-card">
-          <summary>¿Cómo los puedo contactar?</summary>
-          <p>Desde nuestras redes o en la sección de sugerencias, donde el mensaje nos llega directamente.</p>
-        </details>
+          <div style="text-align:center;">
+            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+          </div>
 
-        <details class="faq-card">
-          <summary>¿Por qué “Arconte”?</summary>
-          <p>Es un término simbólico elegido para representar una figura de liderazgo en Hernavia. No implica nada más, solo una forma distintiva de referirse al líder del proyecto.</p>
-        </details>
+          <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
-        <details class="faq-card">
-          <summary>¿Por qué aún no está activa la ciudadanía virtual?</summary>
-          <p>Porque la organización de Hernavia no puede coexistir efectivamente si los ciudadanos virtuales tienen los mismos deberes y derechos, debido a la limitada capacidad de alcance actual y la política de aporte obligatorio.</p>
-        </details>
+            <details class="faq-card">
+              <summary>¿Cómo los puedo contactar?</summary>
+              <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
+            </details>
 
-        <details class="faq-card">
-          <summary>¿Hay riesgos legales al unirse a Hernavia?</summary>
-          <p>No. Todas las sanciones son únicamente internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo incluyen restricciones internas o la revocación de la ciudadanía según las leyes transitorias.</p>
-        </details>
-      </div>
-    </section>
-  </main>
+            <details class="faq-card">
+              <summary>¿Por qué “Arconte”?</summary>
+              <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
+            </details>
 
-  <footer>
-    &copy; 2025 Hernavia — Proyecto Cultural
-  </footer>
+            <details class="faq-card">
+              <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
+              <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
+            </details>
 
-  <script>
-    // Mostrar/Ocultar sección de preguntas
-    document.getElementById('mostrarFAQ').addEventListener('click', function() {
-      const faq = document.getElementById('faqSection');
-      const visible = faq.style.display === 'flex';
-      faq.style.display = visible ? 'none' : 'flex';
-      this.textContent = visible ? 'Mostrar preguntas' : 'Ocultar preguntas';
-    });
+            <details class="faq-card">
+              <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
+              <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
+            </details>
 
-    // Registrar el Service Worker
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('/Hernavia/sw.js')
-          .then(reg => console.log('Service Worker registrado:', reg.scope))
-          .catch(err => console.error('Error al registrar el SW:', err));
+            <details class="faq-card">
+              <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
+              <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
+            </details>
+
+            <details class="faq-card">
+              <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
+              <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
+            </details>
+
+          </div>
+        </section>
+    </main>
+
+    <style>
+      .faq-container {
+        display: flex;
+        flex-direction: column;
+        gap: 28px; /* ← más espacio entre los cuadros */
+      }
+
+      .faq-card {
+        background-color: white;
+        border: 2px solid #006A44;
+        border-radius: 10px;
+        padding: 18px 20px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      }
+
+      .faq-card summary {
+        font-weight: bold;
+        color: #006A44;
+        font-size: 1.2em;
+        list-style: none;
+        outline: none;
+      }
+
+      .faq-card summary::marker {
+        display: none;
+      }
+
+      .faq-card[open] {
+        background-color: #f4fff9;
+        border-color: #004a2d;
+      }
+
+      .faq-card p {
+        margin-top: 10px;
+        color: #333;
+        line-height: 1.5;
+      }
+
+      .faq-toggle {
+        background-color: #006A44;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        padding: 12px 25px;
+        font-size: 1.1em;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      .faq-toggle:hover {
+        background-color: #004a2d;
+      }
+    </style>
+
+    <footer>
+        &copy; 2025 Hernavia — Proyecto Cultural
+    </footer>
+
+    <script>
+      // Mostrar / ocultar bloque de preguntas
+      const toggleButton = document.getElementById('toggleFAQ');
+      const faqContainer = document.getElementById('faqContainer');
+      let visible = false;
+
+      toggleButton.addEventListener('click', () => {
+        visible = !visible;
+        faqContainer.style.display = visible ? 'block' : 'none';
+        toggleButton.textContent = visible ? 'Ocultar Preguntas' : 'Mostrar Preguntas';
       });
-    }
-  </script>
+
+      // Registrar Service Worker
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/Hernavia/sw.js')
+            .then(reg => console.log('Service Worker registrado:', reg.scope))
+            .catch(err => console.error('Error al registrar el SW:', err));
+        });
+      }
+    </script>
 </body>
 </html>
