--- a/simbolos.html
+++ b/simbolos.html
@@ -38,7 +38,7 @@
         margin: 15px auto;
     }
     .section-lema {
-        min-height: 200px;
+         padding: 20px;
     }
 
     /* Preguntas Frecuentes */
