--- a/documentos.html
+++ b/documentos.html
@@ -57,18 +57,20 @@
           <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
             <details class="faq-card">
-              <summary>¿Cómo los puedo contactar?</summary>
-              <p>Puedes escribirnos desde la sección de <a href="sugerencias.html">Sugerencias</a> o a través de nuestras redes sociales. Todos los mensajes llegan directamente al equipo de Hernavia.</p>
+               <summary>¿Los documentos tienen validez legal fuera de Hernavia?</summary>
+  <p>No, todos los documentos tienen efecto únicamente dentro de la comunidad de Hernavia y no generan obligaciones legales externas.</p>
             </details>
 
             <details class="faq-card">
-              <summary>¿Por qué “Arconte”?</summary>
-              <p>Es un término simbólico elegido para representar una figura de liderazgo dentro de Hernavia. El nombre de Arconte fue escogido para distinguir a Hernavia sin aferrarse a títulos tradicionales.</p>
+            <summary>¿Qué es la Carta Fundacional?</summary>
+  <p>Es el documento que expone la creación de Hernavia, sus principios, organización y otros aspectos fundamentales del proyecto.</p>
+</details>
             </details>
 
             <details class="faq-card">
-              <summary>¿Por qué la ciudadanía virtual aún no está disponible?</summary>
-              <p>Porque la organización de Hernavia aún no puede coexistir de manera efectiva si los ciudadanos virtuales tienen los mismos deberes y derechos. Esto se debe a la capacidad limitada de alcance y la política de aporte obligatorio vigente.</p>
+              <summary>¿Porque son Leyes Transitorias?</summary>
+  <p>Porque se consideran de que estas aun no estan solidad frente a como puede desarrolarse Hernavia por lo que se esperara a que las leyes se acomplen bien para dejar de ser transitorias.</p>
+</details>
             </details>
 
             <details class="faq-card">
@@ -82,8 +84,8 @@
             </details>
 
             <details class="faq-card">
-              <summary>¿Qué beneficios tiene unirse a Hernavia?</summary>
-              <p>Formar parte de Hernavia te permite participar en votaciones, ser tomado en cuenta de manera activa y acceder a beneficios internos futuros de la comunidad.</p>
+              <summary>¿Las leyes seran iguales para ciudadanos vituales?</summary>
+              <p>Lo mas probable es que las leyes sean modificadas para ser menos rigidas y que puedan seguirlas todos por igual aunque como opcion alternativa se podran dividir las leyes entre ciudadanos y ciudadanos virtuales.</p>
             </details>
 
           </div>
