--- a/documentos.html
+++ b/documentos.html
@@ -74,14 +74,9 @@
             </details>
 
             <details class="faq-card">
-              <summary>¿Existen riesgos legales al unirse a Hernavia?</summary>
-              <p>No. Todas las sanciones son internas y no hay riesgos legales reales por incumplimiento. Las sanciones solo pueden incluir medidas internas o la revocación de la ciudadanía según las leyes transitorias.</p>
-            </details>
-
-            <details class="faq-card">
-              <summary>¿Hernavia tiene afiliación política o religiosa?</summary>
-              <p>No. Hernavia es completamente subjetiva e independiente. Aunque puede mostrar apoyo a ciertas ideas ideológicas, siempre lo hace de manera neutral, realista y sin afiliación partidista ni religiosa.</p>
-            </details>
+  <summary>¿Quiénes forman la estructura de Hernavia?</summary>
+  <p>Actualmente solo se tiene la figura principal del Arconte. A futuro se planean roles adicionales como el Sage y el Conclave Hernaviano, junto a otros cargos cuando haya más material humano disponible para integrarlos.</p>
+</details>
 
             <details class="faq-card">
               <summary>¿Las leyes seran iguales para ciudadanos vituales?</summary>
