--- a/simbolos.html
+++ b/simbolos.html
@@ -162,6 +162,15 @@
         <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
         <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
     </section>
+
+     <section class="section">
+    <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
+
+    <div style="text-align:center;">
+      <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+    </div>
+
+    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 <details class="faq-card">
   <summary>¿Por qué se creó el himno de Hernavia?</summary>
   <p>El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad comunitaria y motivar la participación activa de todos los miembros en la construcción de la cultura hernaviana.</p>
