--- a/simbolos.html
+++ b/simbolos.html
@@ -172,23 +172,28 @@
 
     <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 <details class="faq-card">
-  <summary>¿Por qué se creó el himno de Hernavia?</summary>
-  <p>El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad comunitaria y motivar la participación activa de todos los miembros en la construcción de la cultura hernaviana.</p>
+  <summary>¿Qué es la Carta Fundacional?</summary>
+  <p>Es el documento que expone la creación de Hernavia, sus principios, organización y demás aspectos fundamentales. Funciona como la guía inicial del proyecto y establece la figura del Arconte como líder principal.</p>
 </details>
 
 <details class="faq-card">
-  <summary>¿Por qué la bandera tiene esos colores?</summary>
-  <p>Los colores fueron elegidos para representar los valores de Hernavia, el verde representa la naturaleza y su tono marino el agua y la innovacion, el blanco simboliza la paz la union la cohesion la verdad la tranqulidad y demos extenciones de paz, y el amarillo simboliza la hermandad con colombia y la fraternidad </p>
+  <summary>¿Qué figuras existen dentro de Hernavia?</summary>
+  <p>Por ahora solo se tiene la figura principal del Arconte. Sin embargo, se planea incorporar otras como el Sage, el Conclave Hernaviano y más, a medida que haya más material humano y desarrollo de la comunidad.</p>
 </details>
 
 <details class="faq-card">
-  <summary>¿Puedo proponer un nuevo símbolo para Hernavia?</summary>
-  <p>¡Claro! Puedes enviar tus propuestas a nuestras redes sociales. Algunas podrían ser adoptadas oficialmente, incluyendo el escudo, y se anunciarán a través de las consultas y comunicados de Hernavia.</p>
+  <summary>¿Por qué existen las Leyes Transitorias?</summary>
+  <p>Son un conjunto de normas provisionales que regulan la participación de los ciudadanos, el aporte obligatorio, las sanciones internas y la administración de datos mientras Hernavia se fortalece y se adapta a sus necesidades. Permiten mantener el orden y la cohesión sin ser definitivas.</p>
 </details>
 
 <details class="faq-card">
-  <summary>¿Habrá más símbolos oficiales?</summary>
-  <p>Sí. Además de la bandera y el himno, se planea crear un escudo, logo y otros elementos simbólicos que representen distintos aspectos de Hernavia. La participación ciudadana será clave para decidir cuáles se adoptan oficialmente.</p>
+  <summary>¿El contenido de los documentos tiene obligaciones legales fuera de Hernavia?</summary>
+  <p>No. Todos los documentos y leyes de Hernavia solo tienen validez dentro de la organización. No generan obligaciones legales reales en el mundo externo y no afectan derechos o deberes fuera de Hernavia.</p>
+</details>
+
+<details class="faq-card">
+  <summary>¿Se pueden sugerir cambios o nuevas figuras?</summary>
+  <p>Sí. Los ciudadanos y participantes pueden enviar propuestas a través de nuestras redes o la sección de Sugerencias. Estas ideas son evaluadas para enriquecer la organización y los documentos oficiales de Hernavia.</p>
 </details>
 
 </main>
