--- a/simbolos.html
+++ b/simbolos.html
@@ -12,93 +12,6 @@
 <meta name="robots" content="index, follow">
 <meta name="author" content="Proyecto Hernavia">
 
-<style>
-    .simbolos-section {
-        max-width: 900px;
-        margin: 20px auto;
-        padding: 20px;
-    }
-    section {
-        padding: 20px;
-        border-left: 8px solid #006A44;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        background-color: white;
-        margin-bottom: 20px;
-    }
-    .himno p {
-        margin-bottom: 15px;
-        line-height: 1.6;
-        text-align: justify;
-    }
-    .bandera {
-        width: 300px;
-        height: auto;
-        display: block;
-        margin: 15px auto;
-    }
-    .section-lema {
-         padding: 20px;
-    }
-
-    /* Preguntas Frecuentes */
-    .faq-container {
-        display: flex;
-        flex-direction: column;
-        gap: 28px; /* más espacio entre cuadros */
-        margin-top: 15px;
-    }
-
-    .faq-card {
-        background-color: white;
-        border: 2px solid #006A44;
-        border-radius: 10px;
-        padding: 18px 20px;
-        cursor: pointer;
-        transition: all 0.3s ease;
-        box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .faq-card summary {
-        font-weight: bold;
-        color: #006A44;
-        font-size: 1.2em;
-        list-style: none;
-        outline: none;
-    }
-
-    .faq-card summary::marker {
-        display: none;
-    }
-
-    .faq-card[open] {
-        background-color: #f4fff9;
-        border-color: #004a2d;
-    }
-
-    .faq-card p {
-        margin-top: 10px;
-        color: #333;
-        line-height: 1.5;
-    }
-
-    .faq-toggle {
-        background-color: #006A44;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        padding: 12px 25px;
-        font-size: 1.1em;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-    }
-
-    .faq-toggle:hover {
-        background-color: #004a2d;
-    }
-</style>
-</head>
-
 <body>
 <header>
     <h1>Símbolos de Hernavia</h1>
@@ -163,37 +76,24 @@
         <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
     </section>
 
-     <section class="section">
-    <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
-
-    <div style="text-align:center;">
-      <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-    </div>
-
-    <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 <details class="faq-card">
-  <summary>¿Qué es la Carta Fundacional?</summary>
-  <p>Es el documento que expone la creación de Hernavia, sus principios, organización y demás aspectos fundamentales. Funciona como la guía inicial del proyecto y establece la figura del Arconte como líder principal.</p>
+  <summary>¿Por qué existe el himno?</summary>
+  <p>El himno fue creado para acercar Hernavia a la gente, fortalecer la identidad de la comunidad y transmitir sus valores de unión, innovación y respeto por la naturaleza.</p>
 </details>
 
 <details class="faq-card">
-  <summary>¿Qué figuras existen dentro de Hernavia?</summary>
-  <p>Por ahora solo se tiene la figura principal del Arconte. Sin embargo, se planea incorporar otras como el Sage, el Conclave Hernaviano y más, a medida que haya más material humano y desarrollo de la comunidad.</p>
+  <summary>¿Por qué la bandera tiene esos colores?</summary>
+  <p>Los colores fueron elegidos cuidadosamente para representar a Hernavia, el verde simbolisa la naturaleza y el tono marino simboliza el agua y la innovacion, el blanco simboliza la paz union, cohesion, verdad, tranqulidad y demas extenciones de paz, el amarillo simboliza la hermandad con Colombia y la fraternidad </p>
 </details>
 
 <details class="faq-card">
-  <summary>¿Por qué existen las Leyes Transitorias?</summary>
-  <p>Son un conjunto de normas provisionales que regulan la participación de los ciudadanos, el aporte obligatorio, las sanciones internas y la administración de datos mientras Hernavia se fortalece y se adapta a sus necesidades. Permiten mantener el orden y la cohesión sin ser definitivas.</p>
+  <summary>¿Puedo crear un símbolo para Hernavia?</summary>
+  <p>Sí, puedes enviar tu propuesta a alguna de nuestras redes sociales. Podríamos usar tu diseño para complementar los símbolos de Hernavia. También estamos planeando crear un escudo oficial y otras insignias.</p>
 </details>
 
 <details class="faq-card">
-  <summary>¿El contenido de los documentos tiene obligaciones legales fuera de Hernavia?</summary>
-  <p>No. Todos los documentos y leyes de Hernavia solo tienen validez dentro de la organización. No generan obligaciones legales reales en el mundo externo y no afectan derechos o deberes fuera de Hernavia.</p>
-</details>
-
-<details class="faq-card">
-  <summary>¿Se pueden sugerir cambios o nuevas figuras?</summary>
-  <p>Sí. Los ciudadanos y participantes pueden enviar propuestas a través de nuestras redes o la sección de Sugerencias. Estas ideas son evaluadas para enriquecer la organización y los documentos oficiales de Hernavia.</p>
+  <summary>¿Qué otros símbolos se planean?</summary>
+  <p>Ademas de los ya existentes tambien se planea un escudo y diversos logos o variantes "sorpresas".</p>
 </details>
 
 </main>
