--- a/simbolos.html
+++ b/simbolos.html
@@ -75,6 +75,15 @@
         <p><strong>Lema:</strong> Paz, Naturaleza, Innovación</p>
         <p><strong>Frase:</strong> Nacidos de un sueño, luchando por cumplirlo.</p>
     </section>
+    
+    <section class="section">
+  <h2>Preguntas Frecuentes</h2>
+
+  <div style="text-align:center;">
+    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+  </div>
+
+  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
 <details class="faq-card">
   <summary>¿Por qué existe el himno?</summary>
