--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <section id="significado">
       <h2>Significado de los colores</h2>
       <ul>
-        <li><strong>Verde:</strong> Representa la naturaleza y su tono particular simboliza también la innovación.</li>
-        <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y fraternidad.</li>
-        <li><strong>Amarillo:</strong> Representa las raíces con Colombia.</li>
+        <li><strong>Verde:</strong> Representa la naturaleza, agua y innovacion.</li>
+        <li><strong>Blanco:</strong> Simboliza la paz, cohesión, unión y verdad.</li>
+        <li><strong>Amarillo:</strong> Representa las raíces con Colombia y la fraternidad.</li>
       </ul>
     </section>
   </main>
@@ -129,4 +129,5 @@
 
 </body>
 </html>
+
 
