--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
   </main>
 
   <!-- Sección de Preguntas Frecuentes -->
-<section class="section">
-  <h2>Preguntas Frecuentes</h2>
+ <section class="section">
+          <h2 style="text-align:center; color:#006A44; margin-bottom:15px;">Preguntas Frecuentes</h2>
 
-  <div style="text-align:center;">
-    <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
-  </div>
+          <div style="text-align:center;">
+            <button id="toggleFAQ" class="faq-toggle">Mostrar Preguntas</button>
+          </div>
 
-  <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
+          <div id="faqContainer" class="faq-container" style="display:none; margin-top:20px;">
 
     <details class="faq-card">
       <summary>¿Cómo los puedo contactar?</summary>
@@ -129,5 +129,6 @@
 
 </body>
 </html>
+
 
 
